css/styles.css
:root {
  --background-color: #2f303a;
  --blue-fonts-color: #2196f3;
  --h1-color: #ffffff;
  --bold-fonts-color: #212121;
  --grey-fonts-color: #757575;
  --footer-contacts-color: rgba(255, 255, 255, 0.6);
}
.logo1 {
  font-family: "Raleway";

  font-weight: 700;
  font-size: 26px;
  line-height: 1.19;
  color: var(--blue-fonts-color);
  text-decoration: none;
  display: flex;
}
.container {
  margin: 0 auto;

  max-width: 1198px;
}
.container-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: #757575;
}
.navigation-container {
  display: flex;
  align-items: center;
}
.navigation {
  display: flex;
  align-items: center;
}
.menu {
  display: flex;
  max-width: 261 px;
  height: 16px;
  flex-grow: 1;
}
.contacts-menu {
  display: flex;
}
.menu-contacts-top {
  display: flex;
  list-style: none;
}
.links {
  font-family: "Roboto";

  font-weight: 500;
  font-size: 14px;
  line-height: 1.14;
  text-decoration: none;
  color: var(--grey-fonts-color);
}
.links:hover,
.links:focus {
  color: var(--blue-fonts-color);
}
.nav-items {
  list-style: none;
  padding-left: 20px;
}
.nav-icon {
  border: none;
}
.nav-icon:hover {
  fill: var(--blue-fonts-color);
}
.contacts-top {
  display: flex;
  font-family: "Roboto";
  font-weight: 500;
  font-size: 14px;
  line-height: 1.14;
  text-decoration: none;
  color: var(--grey-fonts-color);
  margin: 20px;
  align-content: center;
}
.contacts-top:hover,
.contacts-top:focus {
  color: var(--blue-fonts-color);
  fill: var(--blue-fonts-color);
}

.svg-contacts {
  display: flex;
  align-items: center;
}

.menu-portfolio {
  display: flex;
  justify-content: center;
  align-content: space-between;
  gap: 8px;
}
.logo2 {
  font-family: "Raleway";

  font-weight: 700;
  font-size: 26px;
  line-height: 1.19;

  color: var(--blue-fonts-color);
  text-decoration: none;
  margin: 5px;
}
.buttons {
  font-family: "Roboto";

  font-weight: 500;
  font-size: 16px;
  line-height: 1.6;

  color: var(--background-color);
  margin-top: 94px;
}
.buttons:hover,
.buttons:focus {
  background-color: #2196f3;
}
.text-bold {
  font-family: "Roboto";

  font-weight: 700;
  font-size: 18px;
  line-height: 2;

  color: var(--bold-fonts-color);
  text-align: center;
}
.text {
  font-family: "Roboto";
  font-size: 16px;
  line-height: 1.875;

  color: var(--grey-fonts-color);
  text-align: center;
}
.wrapper {
  max-height: 600px;
  background-image: linear-gradient(
      rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)
    ),
    url("../images/people-office-1.jpg");
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 200px 0;
}
.wrapper-bottom {
  background-color: var(--background-color);
}

.h1 {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 900;
  font-size: 44px;
  line-height: 1.36;
  color: var(--h1-color);
  text-align: center;
}
.h2 {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.16;

  color: var(--bold-fonts-color);
  text-align: center;
  margin-top: 94px;
}
.h3 {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.18;
  color: var(--bold-fonts-color);
}
.list-item1 {
  display: flex;
  font-family: "Roboto";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.71;

  color: var(--grey-fonts-color);
}
.list-item2 {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.875;

  color: var(--bold-fonts-color);
  text-align: center;
  margin-top: 30px;
}
.list-item3 {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.875;

  color: var(--grey-fonts-color);
  text-align: center;
  margin-top: 10px;
}
.dark-color {
  color: var(--background-color);
}
.bright-color {
  color: var(--h1-color);
}

.section-team {
  background-color: #f5f4fa;
  height: 740px;
}

.inner-text {
  display: flex;
  max-width: 696px;
}
.inner-button {
  display: block;
}

.list-pictures-portfolio {
  display: flex;
  max-width: 1200px;
  max-height: 1360px;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-top: 34px;
}
.icons-nav {
  display: flex;
  align-items: center;
}
.icons-items {
  display: flex;
  max-width: 270px;
  text-align: left;
  flex-direction: column;
  margin-right: 10px;
}
.icons-background {
  display: flex;
  border-radius: 4px;
  padding: 25px 100px 25px 100px;
  background-color: #f5f4fa;
}
/* .section-2-icons {display: flex;
  margin: auto;
  margin-top: 1%;
  max-width: 1200px;
  justify-content: space-between;
  flex-direction: column;
  align-content: center;
} */
.images-list {
  display: flex;
  justify-content: space-around;
  padding: 0;
}
.inner-images {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  border-radius: 1%;
  background-color: #ffffff;
  margin-top: 50px;
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12);
}
.clients {
  display: flex;
  flex-direction: column;
  align-content: space-between;
  justify-content: center;
  align-items: center;
  padding-bottom: 20px;
}
.clients-main {
  width: 1200px;
  display: flex;
  justify-content: space-between;
  align-content: center;
  align-items: center;
}
.clients-icons {
  display: flex;
  max-height: 92px;
  fill: var(--grey-fonts-color);
  justify-content: space-between;
  align-content: center;
  border: solid;
  border-color: #757575;
  border-radius: 5%;
  padding: 5px;
}
.clients-icons:hover {
  fill: var(--blue-fonts-color);
  border-color: var(--blue-fonts-color);
}
.team-main-social {
  max-width: 206px;
  max-height: 56px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin: 10%;
}

.social-icons-team {
  display: flex;
  max-height: 20px;
  max-width: 20px;
  fill: var(--h1-color);
}
.social-icons-team:hover,
.social-icons-team:focus {
  fill: var(--blue-fonts-color);
}
.social-icons-footer {
  display: flex;
  max-height: 20px;
  max-width: 20px;
  fill: var(--grey-fonts-color);
}

.social-icons-footer:hover,
.social-icons-footer:focus {
  fill: var(--blue-fonts-color);
}
.wrapper-portfolio {
  max-width: 1200px;
  flex-wrap: wrap;
  gap: 30px;
}
.buttons-portfolio {
  display: flex;
}
.pictures-portfolio {
  display: flex;
  max-width: 370px;
  margin-bottom: 35px;
  max-height: 404px;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid var(--grey-fonts-color);
  border-radius: 1%;
}

.pictures-portfolio:hover {
  content: ();
  display: flex;
  max-width: 370px;
  max-height: 404px;
  flex-direction: column;
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12);
  transition: 2ms;
}

.address {
  font-family: "Roboto";
  font-size: 14px;
  line-height: 1.71;
  font-style: none;

  color: var(--h1-color);
  margin-top: 5px;
  font-style: normal;
}
.footer-logo-address {
  display: flex;
  flex-direction: column;
  justify-content: left;
}
.footer-contacts {
  display: flex;
  list-style: none;
  flex-direction: column;
  margin: 0;
  padding: 0;
}
.f-contacts {
  font-family: "Roboto";

  font-weight: 500;
  font-size: 14px;
  line-height: 1.14;
  text-decoration: none;
  color: var(--grey-fonts-color);
}
.contacts-footer {
  font-family: "Roboto";
  font-size: 14px;
  line-height: 1.71;
  text-decoration: none;
  color: var(--grey-fonts-color);
  font-style: normal;
}
.contacts-footer:hover,
.contacts-footer:focus {
  color: var(--blue-fonts-color);
}
.footer-social-container {
  display: flex;
  width: 206px;
  height: 44px;
  background-color: var(--background-color);
  gap: 7px;
  flex-direction: column;
}
.container-social-icons-footer {
  display: flex;
}
.footter-social-icons {
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background-color: var(--blue-fonts-color);
  justify-content: center;
  gap: 7px;
  flex-direction: column;
  flex-wrap: wrap;
}
.address-social {
  display: flex;
  align-items: center;

  gap: 30px;
}

